--- a/03-NoSQL/Lab-04-Python-MongoDB-ETL.ipynb
+++ b/03-NoSQL/Lab-04-Python-MongoDB-ETL.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e8b95ba5",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6d7f6f0b",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "28890801",
    "metadata": {},
    "outputs": [
@@ -78,18 +78,18 @@
      "output_type": "stream",
      "text": [
       "Local Connection String: mongodb://localhost:27017/\n",
-      "Atlas Connection String: mongodb+srv://jtupitza:Passw0rd1234@sandbox.zibbf.mongodb.net\n"
+      "Atlas Connection String: mongodb+srv://mayerwill1414:wGD4aPHNxTFY@cluster0.ba2iiiz.mongodb.net\n"
      ]
     }
    ],
    "source": [
     "mysql_uid = \"root\"\n",
-    "mysql_pwd = \"Passw0rd123\"\n",
+    "mysql_pwd = \"wGD4aPHNxTFY!\"\n",
     "mysql_hostname = \"localhost\"\n",
     "\n",
-    "atlas_cluster_name = \"cluster_name.xxxxx\"\n",
-    "atlas_user_name = \"\"\n",
-    "atlas_password = \"password\"\n",
+    "atlas_cluster_name = \"cluster0.ba2iiiz\"\n",
+    "atlas_user_name = \"mayerwill1414\"\n",
+    "atlas_password = \"wGD4aPHNxTFY\"\n",
     "\n",
     "conn_str = {\"local\" : f\"mongodb://localhost:27017/\",\n",
     "    \"atlas\" : f\"mongodb+srv://{atlas_user_name}:{atlas_password}@{atlas_cluster_name}.mongodb.net\"\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "eabb5f6a",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "9772c78a",
    "metadata": {},
    "outputs": [],
@@ -3815,7 +3815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
