atlas and begin lab

--- a/03-NoSQL/06-Python-MongoDB.ipynb
+++ b/03-NoSQL/06-Python-MongoDB.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "0554d72b",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "6ffc52ac",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
      "output_type": "stream",
      "text": [
       "Local Connection String: mongodb://localhost:27017/\n",
-      "Atlas Connection String: mongodb+srv://mayerwill1414:wGD4aPHNxTFY@cluster0.ba2iiiz.mongodb.net/local\n"
+      "Atlas Connection String: mongodb+srv://:@cluster0.ba2iiiz.mongodb.net/local\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "    \"atlas\" : f\"mongodb+srv://{atlas_user_name}:{atlas_password}@{atlas_cluster_name}.mongodb.net/{atlas_default_dbname}\"\n",
     "}\n",
     "\n",
-    "client = pymongo.MongoClient(conn_str[\"atlas\"])\n",
+    "# client = pymongo.MongoClient(conn_str[\"atlas\"])\n",
     "\n",
     "print(f\"Local Connection String: {conn_str['local']}\")\n",
     "print(f\"Atlas Connection String: {conn_str['atlas']}\")"
@@ -92,17 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "7a4b710e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['admin', 'local']"
+       "['blog', 'northwind_purchasing', 'admin', 'local']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "0a1f9e92",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['posts']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "5b9f2393",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Document ID:  65f1e07a22854d5ff536526b\n"
+      "Document ID:  65f1e23622854d5ff536526e\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "102decf4",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Databases:  ['blog', 'admin', 'local']\n",
+      "Databases:  ['blog', 'northwind_purchasing', 'admin', 'local']\n",
       "Collections:  ['posts']\n"
      ]
     }
