--- a/02-Python/Lab-03-Python-Extract-Transform-Load.ipynb
+++ b/02-Python/Lab-03-Python-Extract-Transform-Load.ipynb
@@ -49,7 +49,7 @@
     "host_name = \"localhost\"\n",
     "port = \"3306\"\n",
     "user_id = \"root\"\n",
-    "pwd = \"wGD4aPHNxTFY!\"\n",
+    "pwd = \"\"\n",
     "\n",
     "src_dbname = \"northwind\"\n",
     "dst_dbname = \"northwind_dw2\""
