--- a/02-Python/Lab-03-Python-Extract-Transform-Load.ipynb
+++ b/02-Python/Lab-03-Python-Extract-Transform-Load.ipynb
@@ -43,7 +43,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "6c1a3519",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "host_name = \"localhost\"\n",
