--- a/03-NoSQL/Lab-04-Python-MongoDB-ETL.ipynb
+++ b/03-NoSQL/Lab-04-Python-MongoDB-ETL.ipynb
@@ -3858,7 +3858,7 @@
     "    INNER JOIN northwind_dw2.dim_suppliers AS s\n",
     "    ON po.supplier_key = s.supplier_key\n",
     "    GROUP BY s.company\n",
-    "    ORDER BY 'Total Quantity', 'Total Unit Cost'\n",
+    "    ORDER BY 'Total Quantity', 'Total Unit Cost';\n",
     "\"\"\""
    ]
   },
